Version 1.7.9 1.21.11, Fixed inverse third person bug, fixed all warnings, removed unused variables and files, fixed deprecated function calls.